/**
 * A record to store component attributes (e.g. resistance)
 */
public record Attributes(String name, double defaultValue, double minValue, double maxValue) {}
