@startuml
scale 700 width
interface ITopologyAPI {
    + readJSON(): void
    + writeJSON(): void
    + queryTopologies(): List<Topology>
    + deleteTopology(): Boolean
    + queryDevices(): List<Components>
    + queryDevicesWithNetlistNode(): List<Components>
}

class TopologyAPIConcrete {
    - Topologies: List<Topology>
    - IdValuePairs: HashMap
}

class Topology {
    - id: String
    - components: List
    # getComponentsConnectedToNetlistNode(): List<Component>
    # getComponentsAsJsonArray(): JsonArray
}

class Components {
    -type: String
    -id: String
    -attributes: Attributes
    -netlist: Map
    # isConnectedToNetlistNode(): Boolean
    # getAsJsonElement(): JsonElement
}

class Attributes {
    name: String
    defaultValue: double
    minValue: double
    maxValue: double
}

together {
    interface ITopologyAPI
    class TopologyAPIConcrete
}
TopologyAPIConcrete -[hidden]-> ITopologyAPI
TopologyAPIConcrete "Implements" .l.> ITopologyAPI
TopologyAPIConcrete "1" *-- "0*" Topology: stores
Topology "1" *-- "0*" Components : Contains
Components "1" *-- "1" Attributes : Has
@enduml